--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>XBYRDX – EPK</title>
-  <link rel="stylesheet" href="assets/css/styles.css" />
+  <link rel="stylesheet" href="/EPK/assets/css/styles.css" />
 </head>
 <body>
   <h1 style="color:#ca2a26;">XBYRDX – Anthems For The End Times</h1>
@@ -13,7 +13,16 @@
      <a href="https://www.instagram.com/xbyrdx">Instagram</a> |
      <a href="https://www.facebook.com/share/1NZXE3TxmF/?mibextid=wwXIfr">Facebook</a></p>
   <h2>Gallery</h2>
-  <img src="assets/images/gallery-1.jpeg" alt="Gallery 1" width="200"/>
-  <img src="assets/images/gallery-2.jpeg" alt="Gallery 2" width="200"/>
+  <img src="/EPK/assets/images/gallery-1.jpeg" alt="Gallery 1" width="200"/>
+  <img src="/EPK/assets/images/gallery-2.jpeg" alt="Gallery 2" width="200"/>
+    <img src="/EPK/assets/images/gallery-3.jpeg" alt="Gallery 3" width="200"/>
+    <img src="/EPK/assets/images/gallery-4.jpeg" alt="Gallery 4" width="200"/>
+    <img src="/EPK/assets/images/gallery-5.jpeg" alt="Gallery 5" width="200"/>
+    <img src="/EPK/assets/images/gallery-6.jpeg" alt="Gallery 6" width="200"/>
+    <img src="/EPK/assets/images/gallery-7.jpeg" alt="Gallery 7" width="200"/>
+    <img src="/EPK/assets/images/gallery-8.jpeg" alt="Gallery 8" width="200"/>
+    <img src="/EPK/assets/images/gallery-9.jpeg" alt="Gallery 9" width="200"/>
+    <img src="/EPK/assets/images/gallery-10.jpeg" alt="Gallery 10" width="200"/>
+    <img src="/EPK/assets/images/gallery-11.jpeg" alt="Gallery 11" width="200"/>
 </body>
 </html>
