--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  <p>Electronic Press Kit (EPK) – Cinematic Edition</p>
 
  <p>
-   <a href="https://youtube.com/@xbyrdxbyrdx?feature=shared">YouTube</a> |
+   <a href="https://youtube.com/@xbyrdxbyrdx">YouTube</a> |
    <a href="https://open.spotify.com/user/1268427191?si=y-m7Mp0QRKOP4CJPjucE1g">Spotify</a> |
    <a href="https://www.instagram.com/xbyrdx">Instagram</a> |
    <a href="https://www.facebook.com/share/1NZXE3TxmF/?mibextid=wwXIfr">Facebook</a>
