--- a/index.html
+++ b/index.html
@@ -1,4 +1,118 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+ <meta charset="utf-8" />
+ <title>XBYRDX — EPK</title>
+ <meta name="viewport" content="width=device-width, initial-scale=1" />
+ <link rel="stylesheet" href="assets/css/styles.css" />
+</head>
+<body>
 
+ <!-- Film frame/vignette lives in CSS -->
+
+ <!-- Cover / Poster -->
+ <header class="cover" id="top">
+   <!-- Put your poster image at assets/images/cover.jpg -->
+   <img class="cover__img" src="assets/images/cover.jpg" alt="XBYRDX — Anthems For The End Times poster" />
+   <div class="cover__title">
+     <h1>XBYRDX — <span>Anthems For The End Times</span></h1>
+     <p class="tag">Electronic Press Kit (EPK) — Cinematic Edition</p>
+     <nav class="jump">
+       <a href="#bio">Bio</a>
+       <a href="#music">Music</a>
+       <a href="#press">Press</a>
+       <a href="#photos">Photos</a>
+       <a href="#contact">Contact</a>
+     </nav>
+   </div>
+ </header>
+
+ <!-- Bio & Album -->
+ <section id="bio" class="split">
+   <div class="split__text">
+     <h2>Bio & Album</h2>
+     <p>
+       XBYRDX is a cracked mirror held up to right-now America — equal parts outlaw
+       crooner and midnight-radio provocateur. <em>Anthems For The End Times</em>
+       rides a cinematic blend of rock swagger, noir twang, and doomsday doo-wop:
+       big hooks, bigger shadows, and lyrics that grin through the smoke.
+     </p>
+     <p>
+       Featured single: <strong>“MAGA Girl”</strong> — with companion tracks like
+       “Prizefighter” smashing neon against dust-bowl grit.
+     </p>
+   </div>
+   <div class="split__image">
+     <img src="assets/images/hero-moto.jpeg" alt="XBYRDX on motorcycle" />
+   </div>
+ </section>
+
+ <!-- Tear-off Links (Music / Social) -->
+ <section id="music" class="tearoffs">
+   <h2>Listen / Follow</h2>
+   <ul class="tear">
+     <li><a href="https://www.youtube.com/@xbyrdxxbyrdx" target="_blank" rel="noopener">YouTube</a></li>
+     <li><a href="https://open.spotify.com/user/1268427191" target="_blank" rel="noopener">Spotify</a></li>
+     <li><a href="https://www.instagram.com/xbyrdx" target="_blank" rel="noopener">Instagram</a></li>
+     <li><a href="https://www.facebook.com/share/1NZXE3TxmF" target="_blank" rel="noopener">Facebook</a></li>
+   </ul>
+
+   <div class="feature">
+     <h3>Featured Video: “Prizefighter”</h3>
+     <div class="video">
+       <iframe
+         src="https://www.youtube.com/embed/Ua9wDq3ffjI"
+         title="XBYRDX — Prizefighter"
+         frameborder="0"
+         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+         allowfullscreen></iframe>
+     </div>
+   </div>
+ </section>
+
+ <!-- Press Quotes -->
+ <section id="press" class="press">
+   <h2>Press</h2>
+   <div class="clips">
+     <blockquote class="clip">“A cracked mirror on our current culture” <span>— Paul Hardly</span></blockquote>
+     <blockquote class="clip">“I approve his message” <span>— Donald Drumph</span></blockquote>
+     <blockquote class="clip">“Music to tap your toe and protest to” <span>— Rolling Bone</span></blockquote>
+     <blockquote class="clip">“I’ve seen Rock and Roll future… and it’s AI. In the meantime this guy will do!” <span>— John Landau</span></blockquote>
+     <blockquote class="clip">“Keep us Human under Fire!” <span>— Robert Christgau</span></blockquote>
+   </div>
+ </section>
+
+ <!-- Photo Collage -->
+ <section id="photos" class="photos">
+   <h2>Gallery</h2>
+   <div class="grid">
+     <!-- These use your existing files in assets/images/ -->
+     <figure class="polaroid"><img src="assets/images/gallery-1.jpeg"  alt="Gallery 1" /></figure>
+     <figure class="polaroid"><img src="assets/images/gallery-2.jpeg"  alt="Gallery 2" /></figure>
+     <figure class="polaroid"><img src="assets/images/gallery-3.jpeg"  alt="Gallery 3" /></figure>
+     <figure class="polaroid"><img src="assets/images/gallery-4.jpeg"  alt="Gallery 4" /></figure>
+     <figure class="polaroid"><img src="assets/images/gallery-5.jpeg"  alt="Gallery 5" /></figure>
+     <figure class="polaroid"><img src="assets/images/gallery-6.jpeg"  alt="Gallery 6" /></figure>
+     <figure class="polaroid"><img src="assets/images/gallery-7.jpeg"  alt="Gallery 7" /></figure>
+     <figure class="polaroid"><img src="assets/images/gallery-8.jpeg"  alt="Gallery 8" /></figure>
+     <figure class="polaroid"><img src="assets/images/gallery-9.jpeg"  alt="Gallery 9" /></figure>
+     <figure class="polaroid"><img src="assets/images/gallery-10.jpeg" alt="Gallery 10" /></figure>
+     <figure class="polaroid"><img src="assets/images/gallery-11.jpeg" alt="Gallery 11" /></figure>
+   </div>
+ </section>
+
+ <!-- Contact -->
+ <section id="contact" class="contact">
+   <h2>Contact</h2>
+   <p>Booking / Press: <a href="mailto:byrdbrandmusic@gmail.com">byrdbrandmusic@gmail.com</a></p>
+ </section>
+
+ <footer class="foot">
+   <a href="#top" class="to-top">Back to Top ▲</a>
+ </footer>
+
+</body>
+</html>
 <!DOCTYPE html>
 <html lang="en">
 <head>
