--- a/index.html
+++ b/index.html
@@ -1,31 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
- <meta charset="utf-8" />
- <title>XBYRDX — EPK</title>
- <meta name="viewport" content="width=device-width, initial-scale=1" />
- <link rel="stylesheet" href="assets/css/styles.css" />
-</head>
-<body>
+<header class="cover" id="top">
+ <!-- Logo comes first -->
+ <img class="logo_img" src="assets/images/logo.png" alt="XBYRDX Logo">
 
- <!-- Film frame/vignette lives in CSS -->
+ <!-- Then the poster -->
+ <img class="cover_img" src="assets/images/cover.jpg" alt="XBYRDX – Anthem Poster">
 
- <!-- Cover / Poster -->
- <header class="cover" id="top">
-   <!-- Put your poster image at assets/images/cover.jpg -->
-   <img class="cover__img" src="assets/images/cover.jpg" alt="XBYRDX — Anthems For The End Times poster" />
-   <div class="cover__title">
-     <h1>XBYRDX — <span>Anthems For The End Times</span></h1>
-     <p class="tag">Electronic Press Kit (EPK) — Cinematic Edition</p>
-     <nav class="jump">
-       <a href="#bio">Bio</a>
-       <a href="#music">Music</a>
-       <a href="#press">Press</a>
-       <a href="#photos">Photos</a>
-       <a href="#contact">Contact</a>
-     </nav>
-   </div>
- </header>
+ <div class="cover_title">
+   <h1>XBYRDX — <span>Anthems For The End Times</span></h1>
+   <p class="tag">Electronic Press Kit (EPK) – Cinematic Edition</p>
+   <nav class="jump">
+     <a href="#bio">Bio</a>
+     <a href="#music">Music</a>
+     <a href="#press">Press</a>
+     <a href="#photos">Photos</a>
+     <a href="#contact">Contact</a>
+   </nav>
+ </div>
+</header>
 
  <!-- Bio & Album -->
  <section id="bio" class="split">
