--- a/index.html
+++ b/index.html
@@ -1,22 +1,29 @@
-<header class="cover" id="top">
- <!-- Logo comes first -->
- <img class="logo_img" src="assets/images/logo.png" alt="XBYRDX Logo">
-
- <!-- Then the poster -->
- <img class="cover_img" src="assets/images/cover.jpg" alt="XBYRDX – Anthem Poster">
-
- <div class="cover_title">
-   <h1>XBYRDX — <span>Anthems For The End Times</span></h1>
-   <p class="tag">Electronic Press Kit (EPK) – Cinematic Edition</p>
-   <nav class="jump">
-     <a href="#bio">Bio</a>
-     <a href="#music">Music</a>
-     <a href="#press">Press</a>
-     <a href="#photos">Photos</a>
-     <a href="#contact">Contact</a>
-   </nav>
+<body>
+ <!-- Logo Stamp -->
+ <div class="logo-stamp" style="text-align:center; margin: 40px 0;">
+   <img src="assets/images/logo.png" alt="XBYRDX Logo" style="max-width:200px; height:auto;">
  </div>
-</header>
+
+ <!-- Cover / Poster -->
+ <header class="cover" id="top">
+   <img class="cover_img" src="assets/images/cover.jpg" alt="XBYRDX — Anthems For The End Times">
+   <div class="cover_title">
+     <h1><span style="color:#ca2a26;">XBYRDX</span> — Anthems For The End Times</h1>
+     <p class="tag">Electronic Press Kit (EPK) – Cinematic Edition</p>
+     <nav class="jump">
+       <a href="#bio">Bio</a>
+       <a href="#music">Music</a>
+       <a href="#press">Press</a>
+       <a href="#photos">Photos</a>
+       <a href="#contact">Contact</a>
+     </nav>
+   </div>
+ </header>
+
+ <!-- Bio & Album -->
+ <section id="bio" class="split">
+   <!-- your existing bio content here -->
+ </section>
 
  <!-- Bio & Album -->
  <section id="bio" class="split">
