--- a/index.html
+++ b/index.html
@@ -1,24 +1,23 @@
-<body>
- <!-- Logo Stamp -->
- <div class="logo-stamp" style="text-align:center; margin: 40px 0;">
-   <img src="assets/images/logo.png" alt="XBYRDX Logo" style="max-width:200px; height:auto;">
- </div>
+<!-- Logo -->
+<div class="logo-stamp" role="img" aria-label="XBYRDX logo">
+ <img src="assets/images/logo.png" alt="XBYRDX logo">
+</div>
 
- <!-- Cover / Poster -->
- <header class="cover" id="top">
-   <img class="cover_img" src="assets/images/cover.jpg" alt="XBYRDX — Anthems For The End Times">
-   <div class="cover_title">
-     <h1><span style="color:#ca2a26;">XBYRDX</span> — Anthems For The End Times</h1>
-     <p class="tag">Electronic Press Kit (EPK) – Cinematic Edition</p>
-     <nav class="jump">
-       <a href="#bio">Bio</a>
-       <a href="#music">Music</a>
-       <a href="#press">Press</a>
-       <a href="#photos">Photos</a>
-       <a href="#contact">Contact</a>
-     </nav>
-   </div>
- </header>
+<!-- Title + Nav -->
+<div class="hero-title">
+ <h1><span>XBYRDX</span> — Anthems For The End Times</h1>
+ <p class="tag">Electronic Press Kit (EPK) — Cinematic Edition</p>
+ <nav class="jump">
+   <a href="#bio">Bio</a>
+   <a href="#music">Music</a>
+   <a href="#press">Press</a>
+   <a href="#photos">Photos</a>
+   <a href="#contact">Contact</a>
+ </nav>
+</div>
+
+<!-- Poster -->
+<img class="poster" src="assets/images/cover.jpg" alt="Anthems For The End Times cover">
 
  <!-- Bio & Album -->
  <section id="bio" class="split">
