--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-<!-- Logo -->
-<div class="logo-stamp" role="img" aria-label="XBYRDX logo">
- <img src="assets/images/logo.png" alt="XBYRDX logo">
-</div>
 
 <!-- Title + Nav -->
 <div class="hero-title">
@@ -17,7 +13,7 @@
 </div>
 
 <!-- Poster -->
-<img class="poster" src="assets/images/cover.jpg" alt="Anthems For The End Times cover">
+<img class="image0" src="assets/images/cover.jpg" alt="Anthems For The End Times cover">
 
  <!-- Bio & Album -->
  <section id="bio" class="split">
