--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </div>
 
 <!-- Poster -->
-<img class="image0" src="assets/images/cover.jpg" alt="Anthems For The End Times cover">
+<img class="cover_img" src="assets/images/image0.png" alt="Anthems For The End Times cover">
 
  <!-- Bio & Album -->
  <section id="bio" class="split">
