--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+ <meta charset="UTF-8">
+ <title>XBYRDX — EPK</title>
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <link rel="stylesheet" href="assets/css/styles.css">
+</head>
+<body>
 <!-- Title + Nav -->
 <div class="hero-title">
  <h1><span>XBYRDX</span> — Anthems For The End Times</h1>
@@ -95,4 +103,6 @@
  <footer class="foot">
    <a href="#top" class="to-top">Back to Top ▲</a>
  </footer>
-
+</body>
+</html>
+ 
