--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </div>
 
 <!-- Poster -->
-<img class="cover_img" src="assets/images/image0.png" alt="Anthems For The End Times cover">
+<img class="cover_img" src="assets/images/image0.png?v=2" alt="Anthems For The End Times cover">
 
 
  <!-- Bio & Album -->
@@ -29,7 +29,8 @@
    <div class="split__text">
      <h2>Bio & Album</h2>
      <p>
-       XBYRDX is a cracked mirror held up to right-now America — equal parts outlaw
+
+      XBYRDX is a cracked mirror held up to right-now America — equal parts outlaw
        crooner and midnight-radio provocateur. <em>Anthems For The End Times</em>
        rides a cinematic blend of rock swagger, noir twang, and doomsday doo-wop:
        big hooks, bigger shadows, and lyrics that grin through the smoke.
