--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
  <section id="music" class="tearoffs">
    <h2>Listen / Follow</h2>
    <ul class="tear">
-     <li><a href="https://www.youtube.com/@xbyrdxbyrdx" target="_blank" rel="noopener">YouTube</a></li>
+     <li><a href="https://www.youtube.com/@xbyrdxbyrdx?feature=shared" target="_blank" rel="noopener">YouTube</a></li>
      <li><a href="https://open.spotify.com/user/1268427191" target="_blank" rel="noopener">Spotify</a></li>
      <li><a href="https://www.instagram.com/xbyrdx" target="_blank" rel="noopener">Instagram</a></li>
      <li><a href="https://www.facebook.com/share/1NZXE3TxmF" target="_blank" rel="noopener">Facebook</a></li>
