--- a/index.html
+++ b/index.html
@@ -44,13 +44,50 @@
 
  <!-- Tear-off Links (Music / Social) -->
  <section id="music" class="tearoffs">
-   <h2>Listen / Follow</h2>
-   <ul class="tear">
-     <li><a href="https://www.youtube.com/@xbyrdxbyrdx?feature=shared" target="_blank" rel="noopener">YouTube</a></li>
-     <li><a href="https://open.spotify.com/user/1268427191" target="_blank" rel="noopener">Spotify</a></li>
-     <li><a href="https://www.instagram.com/xbyrdx" target="_blank" rel="noopener">Instagram</a></li>
-     <li><a href="https://www.facebook.com/share/1NZXE3TxmF" target="_blank" rel="noopener">Facebook</a></li>
-   </ul>
+  <!-- Listen / Follow Section -->
+<h2 class="listen-follow">Listen / Follow</h2>
+
+<div class="social-media">
+ <div class="icon">
+   <a href="https://www.youtube.com/yourchannel" target="_blank">
+     <!-- YouTube -->
+     <svg xmlns="http://www.w3.org/2000/svg" width="1in" height="1in" viewBox="0 0 24 24" fill="red">
+       <path d="M23.498 6.186a2.994 2.994 0 0 0-2.112-2.121C19.505 3.5 12 3.5 12 3.5s-7.505 0-9.386.565a2.994 2.994 0 0 0-2.112 2.121A31.027 31.027 0 0 0 0 12a31.027 31.027 0 0 0 .502 5.814 2.994 2.994 0 0 0 2.112 2.121C4.495 20.5 12 20.5 12 20.5s7.505 0 9.386-.565a2.994 2.994 0 0 0 2.112-2.121A31.027 31.027 0 0 0 24 12a31.027 31.027 0 0 0-.502-5.814zM9.75 15.02v-6.04L15.5 12l-5.75 3.02z"/>
+     </svg>
+     <p>YouTube</p>
+   </a>
+ </div>
+
+ <div class="icon">
+   <a href="https://open.spotify.com/yourprofile" target="_blank">
+     <!-- Spotify -->
+     <svg xmlns="http://www.w3.org/2000/svg" width="1in" height="1in" viewBox="0 0 24 24" fill="green">
+       <path d="M12 0a12 12 0 1 0 0 24A12 12 0 0 0 12 0zm5.473 17.392a.75.75 0 0 1-1.034.246c-2.832-1.734-6.396-2.126-10.604-1.166a.75.75 0 1 1-.322-1.468c4.648-1.02 8.61-.57 11.77 1.332a.75.75 0 0 1 .19 1.056zm1.473-3.247a.937.937 0 0 1-1.289.307c-3.24-1.993-8.192-2.574-12.027-1.413a.937.937 0 1 1-.55-1.793c4.317-1.325 9.808-.68 13.507 1.71a.937.937 0 0 1 .359 1.189zm.12-3.361c-3.888-2.31-10.325-2.522-14.036-1.386a1.125 1.125 0 1 1-.664-2.155c4.246-1.308 11.387-1.06 15.825 1.6a1.125 1.125 0 1 1-1.125 1.941z"/>
+     </svg>
+     <p>Spotify</p>
+   </a>
+ </div>
+
+ <div class="icon">
+   <a href="https://www.instagram.com/yourprofile" target="_blank">
+     <!-- Instagram -->
+     <svg xmlns="http://www.w3.org/2000/svg" width="1in" height="1in" viewBox="0 0 24 24" fill="#E1306C">
+       <path d="M12 2.163c3.204 0 3.584.012 4.85.07 1.366.062 2.633.342 3.608 1.317.975.975 1.255 2.242 1.317 3.608.058 1.266.07 1.646.07 4.85s-.012 3.584-.07 4.85c-.062 1.366-.342 2.633-1.317 3.608-.975.975-2.242 1.255-3.608 1.317-1.266.058-1.646.07-4.85.07s-3.584-.012-4.85-.07c-1.366-.062-2.633-.342-3.608-1.317-.975-.975-1.255-2.242-1.317-3.608C2.175 15.584 2.163 15.204 2.163 12s.012-3.584.07-4.85c.062-1.366.342-2.633 1.317-3.608C4.525 2.575 5.792 2.295 7.158 2.233 8.424 2.175 8.804 2.163 12 2.163zM12 0C8.741 0 8.332.014 7.052.072 5.775.13 4.638.372 3.678 1.332 2.718 2.292 2.476 3.429 2.418 4.706 2.36 5.986 2.346 6.395 2.346 9.654v4.692c0 3.259.014 3.668.072 4.948.058 1.277.3 2.414 1.26 3.374.96.96 2.097 1.202 3.374 1.26 1.28.058 1.689.072 4.948.072s3.668-.014 4.948-.072c1.277-.058 2.414-.3 3.374-1.26.96-.96 1.202-2.097 1.26-3.374.058-1.28.072-1.689.072-4.948V9.654c0-3.259-.014-3.668-.072-4.948-.058-1.277-.3-2.414-1.26-3.374-.96-.96-2.097-1.202-3.374-1.26C15.668.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 1 0 0 12.324 6.162 6.162 0 0 0 0-12.324zm0 10.162a4 4 0 1 1 0-8.001 4 4 0 0 1 0 8.001zm6.406-11.845a1.44 1.44 0 1 0 0 2.88 1.44 1.44 0 0 0 0-2.88z"/>
+     </svg>
+     <p>Instagram</p>
+   </a>
+ </div>
+
+ <div class="icon">
+   <a href="https://www.facebook.com/yourprofile" target="_blank">
+     <!-- Facebook -->
+     <svg xmlns="http://www.w3.org/2000/svg" width="1in" height="1in" viewBox="0 0 24 24" fill="#1877F2">
+       <path d="M22.675 0H1.325C.593 0 0 .593 0 1.325v21.351C0 23.407.593 24 1.325 24h11.495v-9.294H9.691v-3.622h3.129V8.413c0-3.1 1.894-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.796.715-1.796 1.764v2.313h3.587l-.467 3.622h-3.12V24h6.116C23.407 24 24 23.407 24 22.676V1.325C24 .593 23.407 0 22.675 0z"/>
+     </svg>
+     <p>Facebook</p>
+   </a>
+ </div>
+</div>
 
    <div class="feature">
      <h3>Featured Video: “Prizefighter”</h3>
