--- a/index.html
+++ b/index.html
@@ -46,28 +46,35 @@
 
  <!-- Tear-off Links (Music / Social) -->
  <section id="music" class="tearoffs">
-  <!-- Listen / Follow Section -->
-<h2 class="listen-follow">Listen / Follow</h2>
-
-<div class="social-media">
- <div class="icon">
-   <a href="https://www.youtube.com/yourchannel" target="_blank">
-     <!-- YouTube -->
-     <svg xmlns="http://www.w3.org/2000/svg" width="1in" height="1in" viewBox="0 0 24 24" fill="red">
-       <path d="M23.498 6.186a2.994 2.994 0 0 0-2.112-2.121C19.505 3.5 12 3.5 12 3.5s-7.505 0-9.386.565a2.994 2.994 0 0 0-2.112 2.121A31.027 31.027 0 0 0 0 12a31.027 31.027 0 0 0 .502 5.814 2.994 2.994 0 0 0 2.112 2.121C4.495 20.5 12 20.5 12 20.5s7.505 0 9.386-.565a2.994 2.994 0 0 0 2.112-2.121A31.027 31.027 0 0 0 24 12a31.027 31.027 0 0 0-.502-5.814zM9.75 15.02v-6.04L15.5 12l-5.75 3.02z"/>
-     </svg>
-     <p>YouTube</p>
-   </a>
- </div>
-
- <div class="icon">
-   <a href="https://open.spotify.com/yourprofile" target="_blank">
-     <!-- Spotify -->
-     <svg xmlns="http://www.w3.org/2000/svg" width="1in" height="1in" viewBox="0 0 24 24" fill="green">
-       <path d="M12 0a12 12 0 1 0 0 24A12 12 0 0 0 12 0zm5.473 17.392a.75.75 0 0 1-1.034.246c-2.832-1.734-6.396-2.126-10.604-1.166a.75.75 0 1 1-.322-1.468c4.648-1.02 8.61-.57 11.77 1.332a.75.75 0 0 1 .19 1.056zm1.473-3.247a.937.937 0 0 1-1.289.307c-3.24-1.993-8.192-2.574-12.027-1.413a.937.937 0 1 1-.55-1.793c4.317-1.325 9.808-.68 13.507 1.71a.937.937 0 0 1 .359 1.189zm.12-3.361c-3.888-2.31-10.325-2.522-14.036-1.386a1.125 1.125 0 1 1-.664-2.155c4.246-1.308 11.387-1.06 15.825 1.6a1.125 1.125 0 1 1-1.125 1.941z"/>
-     </svg>
-     <p>Spotify</p>
-   </a>
+  <section id="listen">
+ <h2>Listen / Follow</h2>
+ <ul class="social">
+   <li>
+     <a href="https://www.youtube.com/@xbyrdxxbyrdx" target="_blank" rel="noopener">
+       <img src="assets/images/ico-youtube.svg" alt="YouTube">
+       <span>YouTube</span>
+     </a>
+   </li>
+   <li>
+     <a href="https://open.spotify.com/user/1268427191" target="_blank" rel="noopener">
+       <img src="assets/images/ico-spotify.svg" alt="Spotify">
+       <span>Spotify</span>
+     </a>
+   </li>
+   <li>
+     <a href="https://www.instagram.com/xbyrdx" target="_blank" rel="noopener">
+       <img src="assets/images/ico-instagram.svg" alt="Instagram">
+       <span>Instagram</span>
+     </a>
+   </li>
+   <li>
+     <a href="https://www.facebook.com/share/1NZXE3Txmf/" target="_blank" rel="noopener">
+       <img src="assets/images/ico-facebook.svg" alt="Facebook">
+       <span>Facebook</span>
+     </a>
+   </li>
+ </ul>
+</section>
  </div>
 
  <div class="icon">
