--- a/index.html
+++ b/index.html
@@ -45,57 +45,16 @@
  </section>
 
  <!-- Tear-off Links (Music / Social) -->
- <section id="music" class="tearoffs">
-  <section id="listen">
+ <!-- Listen / Follow Section -->
+<section id="music" class="tearoffs">
  <h2>Listen / Follow</h2>
- <ul class="social">
-   <li>
-     <a href="https://www.youtube.com/@xbyrdxxbyrdx" target="_blank" rel="noopener">
-       <img src="assets/images/ico-youtube.svg" alt="YouTube">
-       <span>YouTube</span>
-     </a>
-   </li>
-   <li>
-     <a href="https://open.spotify.com/user/1268427191" target="_blank" rel="noopener">
-       <img src="assets/images/ico-spotify.svg" alt="Spotify">
-       <span>Spotify</span>
-     </a>
-   </li>
-   <li>
-     <a href="https://www.instagram.com/xbyrdx" target="_blank" rel="noopener">
-       <img src="assets/images/ico-instagram.svg" alt="Instagram">
-       <span>Instagram</span>
-     </a>
-   </li>
-   <li>
-     <a href="https://www.facebook.com/share/1NZXE3Txmf/" target="_blank" rel="noopener">
-       <img src="assets/images/ico-facebook.svg" alt="Facebook">
-       <span>Facebook</span>
-     </a>
-   </li>
+ <ul class="icons-row">
+   <li><a href="https://www.youtube.com/@xbyrdxxbyrdx" target="_blank" rel="noopener">YouTube</a></li>
+   <li><a href="https://open.spotify.com/user/1268427191" target="_blank" rel="noopener">Spotify</a></li>
+   <li><a href="https://www.instagram.com/xbyrdx" target="_blank" rel="noopener">Instagram</a></li>
+   <li><a href="https://www.facebook.com/share/1NZXE3TxmF" target="_blank" rel="noopener">Facebook</a></li>
  </ul>
 </section>
- </div>
-
- <div class="icon">
-   <a href="https://www.instagram.com/yourprofile" target="_blank">
-     <!-- Instagram -->
-     <svg xmlns="http://www.w3.org/2000/svg" width="1in" height="1in" viewBox="0 0 24 24" fill="#E1306C">
-       <path d="M12 2.163c3.204 0 3.584.012 4.85.07 1.366.062 2.633.342 3.608 1.317.975.975 1.255 2.242 1.317 3.608.058 1.266.07 1.646.07 4.85s-.012 3.584-.07 4.85c-.062 1.366-.342 2.633-1.317 3.608-.975.975-2.242 1.255-3.608 1.317-1.266.058-1.646.07-4.85.07s-3.584-.012-4.85-.07c-1.366-.062-2.633-.342-3.608-1.317-.975-.975-1.255-2.242-1.317-3.608C2.175 15.584 2.163 15.204 2.163 12s.012-3.584.07-4.85c.062-1.366.342-2.633 1.317-3.608C4.525 2.575 5.792 2.295 7.158 2.233 8.424 2.175 8.804 2.163 12 2.163zM12 0C8.741 0 8.332.014 7.052.072 5.775.13 4.638.372 3.678 1.332 2.718 2.292 2.476 3.429 2.418 4.706 2.36 5.986 2.346 6.395 2.346 9.654v4.692c0 3.259.014 3.668.072 4.948.058 1.277.3 2.414 1.26 3.374.96.96 2.097 1.202 3.374 1.26 1.28.058 1.689.072 4.948.072s3.668-.014 4.948-.072c1.277-.058 2.414-.3 3.374-1.26.96-.96 1.202-2.097 1.26-3.374.058-1.28.072-1.689.072-4.948V9.654c0-3.259-.014-3.668-.072-4.948-.058-1.277-.3-2.414-1.26-3.374-.96-.96-2.097-1.202-3.374-1.26C15.668.014 15.259 0 12 0zm0 5.838a6.162 6.162 0 1 0 0 12.324 6.162 6.162 0 0 0 0-12.324zm0 10.162a4 4 0 1 1 0-8.001 4 4 0 0 1 0 8.001zm6.406-11.845a1.44 1.44 0 1 0 0 2.88 1.44 1.44 0 0 0 0-2.88z"/>
-     </svg>
-     <p>Instagram</p>
-   </a>
- </div>
-
- <div class="icon">
-   <a href="https://www.facebook.com/yourprofile" target="_blank">
-     <!-- Facebook -->
-     <svg xmlns="http://www.w3.org/2000/svg" width="1in" height="1in" viewBox="0 0 24 24" fill="#1877F2">
-       <path d="M22.675 0H1.325C.593 0 0 .593 0 1.325v21.351C0 23.407.593 24 1.325 24h11.495v-9.294H9.691v-3.622h3.129V8.413c0-3.1 1.894-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.796.715-1.796 1.764v2.313h3.587l-.467 3.622h-3.12V24h6.116C23.407 24 24 23.407 24 22.676V1.325C24 .593 23.407 0 22.675 0z"/>
-     </svg>
-     <p>Facebook</p>
-   </a>
- </div>
 </div>
 
    <div class="feature">
