--- a/index.html
+++ b/index.html
@@ -45,15 +45,32 @@
      </p>
  </section>
 
- <!-- Tear-off Links (Music / Social) -->
- <!-- Listen / Follow Section -->
+<!-- Tear-off Links (Music / Social) -->
 <section id="music" class="tearoffs">
- <h2>Listen / Follow</h2>
+ <h2 class="listen-follow">Listen / Follow</h2>
+
+ <!-- Row of social buttons (icons + labels) -->
  <ul class="icons-row">
-   <li><a href="https://www.youtube.com/@xbyrdxxbyrdx" target="_blank" rel="noopener">YouTube</a></li>
-   <li><a href="https://open.spotify.com/user/1268427191" target="_blank" rel="noopener">Spotify</a></li>
-   <li><a href="https://www.instagram.com/xbyrdx" target="_blank" rel="noopener">Instagram</a></li>
-   <li><a href="https://www.facebook.com/share/1NZXE3TxmF" target="_blank" rel="noopener">Facebook</a></li>
+   <li>
+     <a href="https://www.youtube.com/@xbyrdxxbyrdx" target="_blank" rel="noopener">
+       <span class="ico yt" aria-hidden="true"></span><span>YouTube</span>
+     </a>
+   </li>
+   <li>
+     <a href="https://open.spotify.com/user/1268427191" target="_blank" rel="noopener">
+       <span class="ico sp" aria-hidden="true"></span><span>Spotify</span>
+     </a>
+   </li>
+   <li>
+     <a href="https://www.instagram.com/xbyrdx" target="_blank" rel="noopener">
+       <span class="ico ig" aria-hidden="true"></span><span>Instagram</span>
+     </a>
+   </li>
+   <li>
+     <a href="https://www.facebook.com/share/1NZXE3TxmF/" target="_blank" rel="noopener">
+       <span class="ico fb" aria-hidden="true"></span><span>Facebook</span>
+     </a>
+   </li>
  </ul>
 </section>
 </div>
