--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
  
  
 <!-- Poster -->
-<img class="cover_img" src="assets/images/image0.png?v=2" alt="Anthems For The End Times cover">
+<div class="poster">
+ <img class="cover_img" src="assets/images/image0.png?v=2" alt="Anthems For The End Times cover">
+
+ <div class="poster-text">
+   <h1 class="poster-title">ANTHEMS FOR THE END TIMES</h1>
+   <h2 class="poster-subtitle">MAGA GIRL</h2>
+ </div>
+</div>
 
 
  <!-- Bio & Album -->
