--- a/index.html
+++ b/index.html
@@ -58,11 +58,29 @@
 <!-- Listen / Follow Section -->
 <section id="music" class="tearoffs">
  <h2 class="listen-follow">Listen / Follow</h2>
+
+ <!-- Icons row -->
  <ul class="icons-row">
-   <li><a href="https://www.youtube.com/yourchannel" target="_blank" class="youtube"><i class="fab fa-youtube"></i> YouTube</a></li>
-   <li><a href="https://open.spotify.com/user/yourid" target="_blank" class="spotify"><i class="fab fa-spotify"></i> Spotify</a></li>
-   <li><a href="https://www.instagram.com/yourid" target="_blank" class="instagram"><i class="fab fa-instagram"></i> Instagram</a></li>
-   <li><a href="https://www.facebook.com/yourid" target="_blank" class="facebook"><i class="fab fa-facebook"></i> Facebook</a></li>
+   <li>
+     <a class="youtube" href="https://www.youtube.com/@xbyrdxxbyrdx" target="_blank" rel="noopener">
+       <i class="fa-brands fa-youtube"></i><span>YouTube</span>
+     </a>
+   </li>
+   <li>
+     <a class="spotify" href="https://open.spotify.com/user/1268427191" target="_blank" rel="noopener">
+       <i class="fa-brands fa-spotify"></i><span>Spotify</span>
+     </a>
+   </li>
+   <li>
+     <a class="instagram" href="https://www.instagram.com/xbyrdx" target="_blank" rel="noopener">
+       <i class="fa-brands fa-instagram"></i><span>Instagram</span>
+     </a>
+   </li>
+   <li>
+     <a class="facebook" href="https://www.facebook.com/share/1NZEX3TxmF" target="_blank" rel="noopener">
+       <i class="fa-brands fa-facebook"></i><span>Facebook</span>
+     </a>
+   </li>
  </ul>
 </section>
 
