--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <link rel="stylesheet" href="assets/css/styles.css">
  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@1000&display=swap" rel="stylesheet">
 
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
  
 </head>
 <body>
