--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
      <h2>Bio & Album</h2>
      <p>
 
-      XBYRDX is a cracked mirror held up to right-now America — equal parts outlaw
-       crooner and midnight-radio provocateur. <em>Anthems For The End Times</em>
+      XBYRDX is bearing witness to the darkness of Modern America — equal parts political 
+      crooner and midnight-radio provocateur. <em>Anthems For The End Times</em>
        rides a cinematic blend of rock swagger, noir twang, and doomsday doo-wop:
        big hooks, bigger shadows, and lyrics that grin through the smoke.
      </p>
