--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
       XBYRDX is bearing witness to the darkness of Modern America — equal parts political 
       crooner and midnight-radio provocateur. <em>Anthems For The End Times</em>
-       rides a cinematic blend of rock swagger, noir twang, and doomsday doo-wop:
+       rides a cinematic blend of Rock Swagger, Noir Americana, and Doomsday Power Pop :
        big hooks, bigger shadows, and lyrics that grin through the smoke.
      </p>
      <p>
