--- a/index.html
+++ b/index.html
@@ -62,22 +62,22 @@
  <!-- Icons row -->
  <ul class="icons-row">
    <li>
-     <a class="youtube" href="https://www.youtube.com/@xbyrdxxbyrdx" target="_blank" rel="noopener">
+     <a class="youtube" href="https://www.youtube.com/@xbyrdxbyrdx" target="_blank" rel="noopener">
        <i class="fa-brands fa-youtube"></i><span>YouTube</span>
      </a>
    </li>
    <li>
-     <a class="spotify" href="https://open.spotify.com/user/1268427191" target="_blank" rel="noopener">
+     <a class="spotify" href="https://open.spotify.com/user/1268427191?si=yQP9A_93TKG09WV8RigPww//" target="_blank" rel="noopener">
        <i class="fa-brands fa-spotify"></i><span>Spotify</span>
      </a>
    </li>
    <li>
-     <a class="instagram" href="https://www.instagram.com/xbyrdx" target="_blank" rel="noopener">
+     <a class="instagram" href="https://www.instagram.com/xbyrdx?igsh=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr" target="_blank" rel="noopener">
        <i class="fa-brands fa-instagram"></i><span>Instagram</span>
      </a>
    </li>
    <li>
-     <a class="facebook" href="https://www.facebook.com/share/1NZEX3TxmF" target="_blank" rel="noopener">
+     <a class="facebook" href="https://www.facebook.com/share/1KFESHzFLD/?mibextid=wwXIfr target="_blank" rel="noopener">
        <i class="fa-brands fa-facebook"></i><span>Facebook</span>
      </a>
    </li>
